--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,19 +1,33 @@
-<%- include("partials/header", {webTitle: 'login'})%>
+<%- include("partials/head", {webTitle: 'login' })%>
 
-<h1><%=title%></h1>
-<h1>Please sign Up</h1>
+<body>
 
+<div class="text-center">
+  <form action="/login" method="POST" style="max-width:300px;margin: auto;">
+    <img class="mt-5" src="logo_mrcoffee.png" alt="Mr Coffe Logo" height="200">
 
-<% if (message) { %>
-    <div><%= message %></div>
-<% } %>   
-<form action="/login" method="POST">
+    <% if (message) { %>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <%= message %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
 
-  <label for="email">Email:</label>
-  <input type="email" name="email" id="email" required />
+      <% } %>
 
-  <label for="password">Password:</label>
-  <input type="password" name="password" id="password" required />
+    <label for="email" class="visually-hidden">Email Address</label>
+    <input type="email" name="email" id="email" class="form-control mb-3" placeholder="Email Address" required autofocus/>
 
-  <button type="submit">Login</button>
-</form>
+    <label for="password" class="visually-hidden">Password</label>
+    <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+
+    <div class="mt-3 d-grid gap-2">
+      <button class="btn btn-lg btn-secondary d-grid">Log In</button>
+    </div>
+
+    <label class="mt-3"> <a href="/signup">Sign up </a>for Mr Cofee</label>
+    
+  </form>
+
+</div>
+
+<%- include("partials/footer")%>
