--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,20 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= webTitle %></title>
-    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
-
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-</head>
 <body>
-
-  
-        <p><a href="/logout">logout</a></p>
-  
-        <p><a href="/signup">Register</a></p>
-
-        <p><a href="/schedule">Management Schedule</a></p>
+  <%#   <nav class="navbar navbar-expand-sm navbar-dark" style="background-color:rgb(96, 106, 113); box-shadow: 0px 2px 5px rgb(44, 43, 43); ">    %>  
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark"> 
+      <div class="container">
+        <a class="navbar-brand" href="/">
+       <img src="full_logo_white.png" alt="Mr Cofee Logo" width="150" height="auto" class="d-inline-block align-top">    
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>   
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <!-- Left links -->
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/schedule">Management Schedule</a>
+            </li>
+          </ul>  
+          <div class="d-flex align-items-center">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">logout</a>
+              </li>
+            </ul>    
+          </div>    
+        </div>
+      </div>    
+    </nav>
+ 
