--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -1,38 +1,92 @@
-<%- include("partials/header", {webTitle: 'Management Schedule'})%>
+<%- include("partials/head", {webTitle: 'Management Schedule' })%>
+  <%- include("partials/header")%>
 
-<h3>Welcome <strong><%= firstname %>  </strong> Here's you can Management your Schedules</h3>
+    <div class="container text-center py-5">
+      <p class="lead">Welcome <strong>
+          <%= firstname %>
+        </strong> Here's you can Management your Schedules</p>
 
-<% if (!empty) { %>
-    <table>
+      <table class="table table-hover">
         <thead>
           <tr>
             <th>Day</th>
             <th>start at</th>
             <th>end at</th>
-            <th></th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody>
-          <% if (schedules.length > 0) { %> 
-              <% schedules.forEach(element => { %>
-                  <tr>
-                      <% const dayNumber = element.day %> 
-                      <% const weekDays = {1: 'Monday',2: 'Tuesday', 3: 'Wednesday', 4: 'Thursday', 5: 'Friday', 6: 'Saturday', 7: 'Sunday'} %>
-                      <% const showDay = weekDays[dayNumber] %>
-                      <td><%= showDay %></td>
-                      <td><%= element.start_time %></td>
-                      <td><%= element.end_time %></td>
-                      <td> <a href="/schedules/<%=element.id%>">Delete</a> </td>
-                      <td><%=element.id  %>    </td>
+          <% if (schedules.length> 0) { %>
+            <% schedules.forEach(element=> { %>
+              <tr>
+                <% const dayNumber=element.day %>
+                  <% const weekDays={1: 'Monday' ,2: 'Tuesday' , 3: 'Wednesday' , 4: 'Thursday' , 5: 'Friday' ,
+                    6: 'Saturday' , 7: 'Sunday' } %>
+                    <% const showDay=weekDays[dayNumber] %>
+                      <td>
+                        <%= showDay %>
+                      </td>
+                      <td>
+                        <%= element.start_time %>
+                      </td>
+                      <td>
+                        <%= element.end_time %>
+                      </td>
 
-                  </tr>
-              <% }) %> 
-          <% } %>
+                      <td>
+                        <form action="/schedule/<%=element.id%>?_method=DELETE" method="POST">
+
+                          <button type="submit" class="btn btn-danger"> Delete </button>
+                        </form>
+                      </td>
+
+              </tr>
+              <% }) %>
+                <% } %>
         </tbody>
       </table>
-<% } else{%>
-    <div>
-        <h1> Without schedules, please register your schedules </h1>
-    </div>
-<% } %> 
+      <% if (empty) { %>
+        <h2>No Schedules Yet</h2>
+        <% } %>
 
+          <div>
+            <button class="btn btn-secondary" id="newSchedule"
+              onclick="userSchedule.style.visibility='visible'; newSchedule.style.visibility='hidden';">
+              Add Schedule
+            </button>
+          </div>
+
+
+
+          <div id="userSchedule" style="visibility: hidden;">
+            <form class="row" action="/schedule" method="POST">
+              <div class="col-3">
+                <select name="day" id="day" required class="form-select">
+                  <option value="" disabled selected>Select a Day</option>
+                  <option value="1">Monday</option>
+                  <option value="2">Tuesday</option>
+                  <option value="3">Wednesday</option>
+                  <option value="4">Thursday</option>
+                  <option value="5">Friday</option>
+                  <option value="6">Saturday</option>
+                  <option value="7">Sunday</option>
+                </select>
+              </div>
+              <div class="col-3">
+                <label for="start_time" class="visually-hidden">Star at:</label>
+                <input type="time" class="form-control" name="start_time" id="start_time" placeholder="Star at">
+              </div>
+              <div class="col-3">
+                <label for="end_time" class="visually-hidden">End at:</label>
+                <input type="time" class="form-control" name="end_time" id="end_time" placeholder="End at">
+              </div>
+              <div class="col-3">
+                <button type="submit" class="btn btn-success">Add</button>
+              </div>
+            </form>
+          </div>
+
+    </div>
+
+
+    <%- include("partials/footer")%>
