--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,18 +1,34 @@
-<h1><%=title%></h1>
-<h1>Please sign Up</h1>
+<%- include("partials/head", {webTitle: 'SignUp'})%>
 
-<form action="/signup" method="POST">
-  <label for="firstname">Firt Name:</label>
-  <input type="text" name="firstname" id="firstname" required />
+<body>
+<div class="text-center">
+  <form action="/signup" method="POST" style="max-width:300px;margin: auto;">
+    <img class="mt-5" src="logo_mrcoffee.png" alt="Mr Coffe Logo" height="200">
+    
+    <label for="firstname" class="visually-hidden">Firt Name:</label>
+    <input type="text" name="firstname" id="firstname"  class="form-control mb-3" placeholder="Firt Name"  required autofocus/>  
 
-  <label for="lastname">Last Name:</label>
-  <input type="text" name="lastname" id="lastname" required />
+    <label for="lastname" class="visually-hidden">Last Name:</label>
+    <input type="text" name="lastname" id="lastname" class="form-control mb-3" placeholder="Last Name"  required />  
 
-  <label for="email">Email:</label>
-  <input type="email" name="email" id="email" required />
+    <label for="email" class="visually-hidden">Email:</label>
+    <input type="email" name="email" id="email" class="form-control mb-3" placeholder="Email"  required />
 
-  <label for="password">Password:</label>
-  <input type="password" name="password" id="password" required />
+    <label for="password" class="visually-hidden">Password</label>
+    <input type="password" name="password" id="password" class="form-control mb-3" placeholder="Password"  required>
 
-  <button type="submit">Register</button>
-</form>
+    <div class="mt-3 d-grid gap-2">
+      <button class="btn btn-lg btn-secondary d-grid">Register</button>
+    </div>    
+
+    <label class="mt-3"> Already have an account? <a href="/login">Log in</a></label>
+  </form>  
+</div>
+
+
+
+
+
+
+
+<%- include("partials/footer")%>
